--- a/src/MEGASync/gui/ui/SyncStallModeSelector.ui
+++ b/src/MEGASync/gui/ui/SyncStallModeSelector.ui
@@ -186,6 +186,12 @@
               </item>
               <item>
                <widget class="QPushButton" name="LearnMoreButton">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
                 <property name="minimumSize">
                  <size>
                   <width>89</width>
