SAT-1658. Error management UI

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -188,5 +188,6 @@
         <file>components/menus/Sizes.qml</file>
         <file>deviceCentre/RenameDeviceDialog.qml</file>
         <file>common/DeviceName.qml</file>
+        <file>components/dialogs/ErrorDialog.qml</file>
     </qresource>
 </RCC>
