--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -110,5 +110,8 @@
         <file>images/qml/pause-circle.svg</file>
         <file>images/qml/minus-circle.svg</file>
         <file>images/qml/play-circle.svg</file>
+        <file>images/qml/alert-triangle.png</file>
+        <file>images/qml/alert-triangle@2x.png</file>
+        <file>images/qml/alert-triangle@3x.png</file>
     </qresource>
 </RCC>
