SNC-3941 : Hide permissions button and save it's row space.

--- a/src/MEGASync/gui/ui/SyncStallModeSelector.ui
+++ b/src/MEGASync/gui/ui/SyncStallModeSelector.ui
@@ -227,7 +227,7 @@
        </layout>
       </item>
       <item>
-       <widget class="QWidget" name="ButtonContainer_2" native="true">
+       <widget class="QWidget" name="permissionsContainer" native="true">
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <property name="spacing">
           <number>0</number>
