--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -75,6 +75,8 @@
         <file>images/qml/guest/setting_up.png</file>
         <file>images/qml/guest/setting_up@2x.png</file>
         <file>images/qml/guest/setting_up@3x.png</file>
+        <file>images/qml/surveys/star_empty.svg</file>
+        <file>images/qml/surveys/star_filled.svg</file>
         <file>images/qml/eye.svg</file>
         <file>images/qml/eye-off.svg</file>
         <file>images/qml/sync_exclusions/x-square.svg</file>
