--- a/src/MEGASync/gui/ui/SyncStallModeSelector.ui
+++ b/src/MEGASync/gui/ui/SyncStallModeSelector.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>451</width>
-    <height>250</height>
+    <height>225</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>0</width>
-    <height>250</height>
+    <height>225</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -151,7 +151,7 @@
             <number>0</number>
            </property>
            <property name="rightMargin">
-            <number>10</number>
+            <number>0</number>
            </property>
            <property name="bottomMargin">
             <number>10</number>
@@ -239,7 +239,7 @@
           <number>0</number>
          </property>
          <property name="rightMargin">
-          <number>10</number>
+          <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
@@ -298,13 +298,19 @@
        <number>0</number>
       </property>
       <property name="rightMargin">
-       <number>20</number>
+       <number>10</number>
       </property>
       <property name="bottomMargin">
        <number>0</number>
       </property>
       <item>
        <widget class="QLabel" name="label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
          <string>Apply previous exclusion rules</string>
         </property>
@@ -318,7 +324,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>233</width>
-          <height>20</height>
+          <height>5</height>
          </size>
         </property>
        </spacer>
