--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
@@ -1,6 +1,6 @@
 *
 {
-font-family: Segoe UI;
+font-family: "Segoe UI";
 font-size: 12px;
 }
 
@@ -8,103 +8,6 @@ QWidget
 {
 background-color: #FFFFFFFF; /*colorToken.page-background*/
 color: #ff303233; /*colorToken.text-primary*/
-}
-
-/*
-    QTableView
-*/
-QTableView
-{
-background: #ff18191A; /*colorToken.page-background*/
-outline: 0;
-border: 1px solid #ff18191A; /*colorToken.page-background*/
-border-radius: 5px;
-selection-color: #ffF3F4F4; /*colorToken.text-primary*/
-}
-
-QTableView::item
-{
-border: none;
-padding-left:4px;
-}
-
-QTableView::item::selected
-{
-background-color: rgba(0,120,215,0.8); /* TODO: replace harcoded color with token!*/
-color: #FFF3F4F4; /* colorToken.text-primary*/
-}
-
-QTableView::indicator
-{
-height: 16px;
-width: 16px;
-padding: 2px;
-border-style: none;
-}
-
-QTableView::indicator:checked
-{
-image: url(:/images/themed/light/checkbox_on.svg); /*replaceThemeToken*/
-}
-
-QTableView::indicator:checked:hover
-{
-image: url(:/images/themed/light/checkbox_on_hover.svg); /*replaceThemeToken*/
-}
-
-QTableView::indicator:checked:pressed
-{
-image: url(:/images/themed/light/checkbox_on_pressed.svg); /*replaceThemeToken*/
-}
-
-QTableView::indicator:checked:disabled
-{
-image: url(:/images/themed/light/checkbox_on_disabled.svg); /*replaceThemeToken*/
-}
-
-QTableView::indicator:unchecked
-{
-image: url(:/images/themed/light/checkbox_off.svg); /*replaceThemeToken*/
-}
-
-QTableView::indicator:unchecked:hover
-{
-image: url(:/images/themed/light/checkbox_off_hover.svg); /*replaceThemeToken*/
-}
-
-QTableView::indicator:unchecked:pressed
-{
-image: url(:/images/themed/light/checkbox_off_pressed.svg); /*replaceThemeToken*/
-}
-
-QTableView::indicator:unchecked:disabled
-{
-image: url(:/images/themed/light/checkbox_off_disabled.svg); /*replaceThemeToken*/
-}
-
-/*
-    QHeaderView
-*/
-QHeaderView
-{
-background: #FF18191A; /*colorToken.page-background*/
-padding-top: 2px;
-}
-
-QHeaderView::section
-{
-background: #FF18191A; /*colorToken.page-background*/
-color: #FFF3F4F4; /*colorToken.text-primary*/
-padding-left: 6px;
-border-top: 0px;
-border-bottom: 0px;
-border-left: 0px;
-border-right: 0px ;
-}
-
-QHeaderView::section:last
-{
-border-right: 0px;
 }
 
 /*
