--- a/src/MEGASync/gui/Resources.qrc
+++ b/src/MEGASync/gui/Resources.qrc
@@ -71,8 +71,6 @@
         <file>images/themed/light/checkbox_off_hover.svg</file>
         <file>images/themed/light/checkbox_off_disabled.svg</file>
         <file>images/themed/light/checkbox_off.svg</file>
-        <file>images/themed/light/lock.png</file>
-        <file>images/themed/light/key_pass.png</file>
         <file>images/themed/light/eye_press.svg</file>
         <file>images/themed/light/eye-off_press.svg</file>
         <file>images/themed/light/eye-off_hover.svg</file>
@@ -101,5 +99,7 @@
         <file>images/themed/dark/chevron-down_hover.svg</file>
         <file>images/themed/dark/chevron-down_disabled.svg</file>
         <file>images/themed/dark/chevron-down_default.svg</file>
+        <file>images/lock.png</file>
+        <file>images/key_pass.png</file>
     </qresource>
 </RCC>
