SNC-3941: Sleep mode word wrap.

--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -49,6 +49,11 @@
 
 /*ColorTokenIcon;Button;bHelp;normal;off;colorToken.link-primary*/
 
+#cbSleepMode
+{
+spacing: 0px;
+}
+
 #downloadIcon
 {
 image: url(:/images/themed/light/arrow-down-circle.svg); /*replaceThemeToken*/
@@ -909,17 +914,50 @@ margin-bottom: 3px;
            <number>14</number>
           </property>
           <item>
-           <widget class="QCheckBox" name="cbSleepMode">
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
+           <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="0,0,1">
+            <property name="spacing">
+             <number>0</number>
             </property>
-            <property name="text">
-             <string>Prevent the computer from going to sleep when transfers or syncs are in progress.</string>
-            </property>
-            <property name="type" stdset="0">
-             <string notr="true">mega</string>
-            </property>
-           </widget>
+            <item>
+             <widget class="QCheckBox" name="cbSleepMode">
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+              <property name="type" stdset="0">
+               <string notr="true">mega</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_7">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Maximum</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>8</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QLabel" name="label_3">
+              <property name="text">
+               <string>Prevent the computer from going to sleep when transfers or syncs are in progress.</string>
+              </property>
+              <property name="wordWrap">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
